fix: cards wrapping

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -117,6 +117,10 @@ ion-toolbar {
       position: absolute;
     }
   }
+  .content__div {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
   ion-content {
 
@@ -158,7 +162,6 @@ ion-toolbar {
     .matchday__results__card,
     .main__table__container,
     .side__table__container {
-      display: inline-flex;
       flex-wrap: wrap;
       vertical-align: top;
       @include to-sm { justify-content: center; }
@@ -371,6 +374,10 @@ ion-toolbar {
   }
 }
 
+.main__table__container {
+  @include to-xs { margin: 10px auto !important; }
+  width: 500px;
+}
 .side__table__container {
   @include to-xs { margin: 10px auto !important; }
   width: 200px;
@@ -381,6 +388,10 @@ ion-toolbar {
   .team__header__stats .team__header .team__result__item {
     width: 20%;
   }
+}
+.matchday__results__card {
+  height: fit-content;
+  @include to-xs { margin: 10px auto !important; }
 }
 
 .list_title {
